[package]
name = "ask"
version = "0.1.0"
edition = "2021"
description = "quickly ask questions to GPT from your CLI"

[[bin]]
name = "ask"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
dirs = "4.0.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustix = {version = "0.36.8", features = ["process"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
sys-info = "0.9"